# simplus-ai-auto-eda-framework

./: .gitignore  ARCHITECTURE.md  LICENSE  MANIFEST.in  PLOTLY_VISUALIZATION_GUIDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: USAGE_GUIDE.md
examples/: 00_complete_workflow.py  01_quick_start_examples.py  02_advanced_analysis_examples.py  03_real_world_use_cases.py  EXAMPLES_SUMMARY.md  INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  REPORT_GENERATOR_README.md  UNIFIED_API_README.md  advanced_config.py  api_service.py  basic_usage.py  data_generators.py  pipeline_integration.py  plotly_visualization_examples.py  report_generation.py  run_all_examples.py  unified_api_examples.py
simplus_eda/: __init__.py  cache.py  cli.py  error_recovery.py  exceptions.py  logging_config.py  progress.py
simplus_eda/analyzers/: __init__.py  anomaly_detection.py  correlation.py  feature_engineering.py  outlier.py  quality.py  statistical.py  statistical_tests.py  timeseries.py
simplus_eda/backends/: __init__.py  dask_backend.py
simplus_eda/core/: __init__.py  analyzer.py  config.py  eda.py  report.py
simplus_eda/templates/: base.html
simplus_eda/utils/: __init__.py  chunked.py  data_loader.py  formatters.py  memory.py  parallel.py  sampling.py  validators.py
simplus_eda/visualizers/: __init__.py  distributions.py  plotly_viz.py  relationships.py  timeseries.py
tests/: __init__.py  test_error_handling.py  test_large_dataset.py
tests/analyzers/: test_correlation.py  test_outlier.py  test_quality.py  test_statistical.py
tests/core/: __init__.py  test_analyzer.py  test_config.py
tests/utils/: test_data_loader.py  test_formatters.py  test_parallel.py  test_validators.py
tests/visualizers/: test_distributions.py  test_relationships.py  test_timeseries.py
