[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplus-eda"
version = "0.1.0"
description = "A comprehensive automated exploratory data analysis framework for Python"
readme = "README.md"
authors = [
    {name = "Simplus AI Team", email = "contact@simplusai.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "eda",
    "exploratory-data-analysis",
    "data-analysis",
    "data-science",
    "statistics",
    "visualization",
    "automated-analysis",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=0.24.0",
    "openpyxl>=3.0.0",
    "pyarrow>=5.0.0",
    "jinja2>=3.0.0",
    "markdown>=3.3.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
pdf = [
    "weasyprint>=54.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/simplus-ai-auto-eda-framework"
Documentation = "https://simplus-eda.readthedocs.io"
Repository = "https://github.com/yourusername/simplus-ai-auto-eda-framework"
"Bug Tracker" = "https://github.com/yourusername/simplus-ai-auto-eda-framework/issues"

[project.scripts]
simplus-eda = "simplus_eda.cli:main"

[tool.setuptools]
packages = ["simplus_eda"]

[tool.setuptools.package-data]
simplus_eda = ["templates/*", "static/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=simplus_eda",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["simplus_eda"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
